# kvix

./: .coverage  .gitignore  MANIFEST.in  README.md  build-pyinstaller  build-pyproject  cx_freeze_setup.py  io.github.legeyda.Kvix.template  pyinstaller.spec  pyproject.toml  run  run-build  run.py  tox.ini
.github/workflows/: main.yaml
_custom_build/: backend.py
flatpak/: flatpak-appindicator.json  flatpak-tkinter.json
kwix/: __init__.py  app.py  conf.py  impl.py  l10n.py  remote.py  stor.py  util.py
kwix/plugin/: impl.py
kwix/plugin/builtin/: __init__.py  add_action.py  base64decode.py  base64encode.py  machinist.py  quit.py  shell.py  websearch.py
kwix/plugin/discovery/: __init__.py
kwix/ui/: gi.py  kivy.py  tk.py  wx.py
kwix/ui/tk/: __init__.py  plus.py  theme.py
kwix/ui/tk/ctkwrap/: __init__.py  ttk.py
kwix/ui/tk/uni/: classic.py
script/: pyproject_toml_deps.py  shelduck.sh  shelduck_run
src/kvix/: __init__.py  app.py  impl.py  util.py
src/kvix/plugin/builtin/: __init__.py  add_action.py  calculator.py  machinist.py  openurl.py  quit.py  settings.py  shell.py
src/kvix/plugin/discovery/: __init__.py
src/kvix/ui/tk/: __init__.py  plus.py
src/kwix/: __init__.py  app.py  conf.py  impl.py  l10n.py  remote.py  server.py  stor.py  util.py
src/kwix/plugin/: __init__.py  impl.py
src/kwix/plugin/builtin/: __init__.py  add_action.py  base64decode.py  base64encode.py  machinist.py  quit.py  settings.py  shell.py  websearch.py
src/kwix/plugin/discovery/: __init__.py
src/kwix/ui/: tray.py
src/kwix/ui/tk/: __init__.py  plus.py  util.py
src/kwix/ui/tk/uni/: classic.py
test/: test_propty.py
