# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[project]
name = "kwix"
dynamic = ["version"]
dependencies = [
	"chevron==0.14.0",
	"funcy==2.0",
	"pynput==1.7.6",
	"pystray==0.19.4",
	"pygobject==3.46.0",
	"pkgconfig==1.5.5",
	"PyYAML==6.0.1",
	# tk
	"tk==0.1.0"
]

[project.scripts]
kwix = "kwix.app:main"

[build-system]
requires = [ "setuptools>=64", "setuptools-git-versioning==1.13.5", ]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
kwix = "src/kwix"

[tool.setuptools-git-versioning]
enabled = true

[tool.pyproject-appimage]
script = "kwix"
icon = "src/kwix/logo.jpg"
output = "dist/kwix.AppImage"