# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[project]
name = "kvix"
dynamic = ["version"]
dependencies = [
	"funcy",
	"pynput",
	"pystray",
	"pygobject",
	"pkgconfig",
	"pyclip",
	"PyYAML",
	"Jinja2",
	"tk",
]
readme = "README.md"

[project.scripts]
kvix = "kvix.app:main"

[build-system]
requires = [ "setuptools", "setuptools-git-versioning", ]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
kvix = "src/kvix"

[tool.setuptools-git-versioning]
enabled = true

[tool.pyproject-appimage]
script = "kvix"
icon = "src/kvix/logo.jpg"
output = "dist/kvix.AppImage"

[tool.pytest]
testpaths="test"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.coverage.paths]
source =["src/kvix/", "*/site-packages/kvix/"]

[tool.black]
line-length = 99
